# runmatrix

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
demo/: runmatrix.tape
docs/: ARCHITECTURE.md  CLI.md  MANIFESTS.md  PLUGINS.md  ROADMAP.md
examples/: basic.yaml
runmatrix/: __init__.py
runmatrix/cli/: main.py  render.py  textual_app.py
runmatrix/domain/: enums.py  manifest.py  plan.py  result.py  task.py
runmatrix/planning/: expand.py  planner.py  stages.py  validate.py
runmatrix/plugins/loaders/: json_loader.py  toml_loader.py  yaml_loader.py
runmatrix/plugins/runners/: shell_runner.py
runmatrix/plugins/sinks/: console.py
runmatrix/runtime/: executor.py  hooks.py
tests/: test_console_hook.py  test_loaders.py  test_planner.py  test_render.py
